demo: hierarchical problems tree

--- a/demo/demo-course/cpu-specific/lesson.yaml
+++ b/demo/demo-course/cpu-specific/lesson.yaml
@@ -4,5 +4,5 @@ readings:
   - grader-config.md
 
 problems:
-  - simple-asm-aarch64-hello
-  - simple-asm-x86-64-hello
+  - asm-arm:syscalls:hello
+  - asm-x86:syscalls:hello
