--- a/demo/problems/c/print-arguments/problem.yaml
+++ b/demo/problems/c/print-arguments/problem.yaml
@@ -1,4 +1,4 @@
 title: Пример задачи с аргументами командной строки
 
-solution_files: print-command-line-arguments-c.c
+solution_files: print-arguments.c
 
