--- a/yajudge_grader/conf/grader.in.yaml
+++ b/yajudge_grader/conf/grader.in.yaml
@@ -16,19 +16,37 @@ locations:
   working_directory: '@WORK_DIR/$NAME'                 # /var/lib/yajudge/work/default or /opt/yajudge/work/default
   cache_directory: '@CACHE_DIRECTORY/$NAME'            # /var/cache/yajudge/default or /opt/yajudge/cache/default
 
-compilers:
-  enable_sanitizers: undefined address  # unset in case of using Alpine Linux: it lacks support of sanitizers
-  enable_valgrind: true
-  valgrind_extra_memory_limit_mb: 16  # adds extra megabytes for valgrind runtime
-  valgrind_cpu_time_scale: 2.0  # adds extra time for valgrind runtime
-  c_compiler: clang
-  cxx_compiler: clang
-  c_base_options: -O2 -g -Werror
-  cxx_base_options: -O2 -g -Werror
 
 jobs:
   arch_specific_only: false  # set to 'true' if grader is supplementary, for example if running on slow Raspberry Pi,
                              # to prevent taking generic problem jobs which better to run on more powerful servers
+
+default_build_properties:
+  c:
+    compiler: clang
+    compile_options: -O2 -g -Werror
+    enable_sanitizers: undefined address
+  cxx:
+    compiler: clang++
+    compile_options: -02 -g -Werror
+    enable_sanitizers: undefined address
+  S:
+    compiler: clang
+    compile_options: -00 -g
+  java:
+    compiler: javac
+    compile_options: -g -Werror -source 11 -target 11
+
+default_runtime_properties:
+  valgrind:
+    executable: valgrind
+    runtime_options: --leak-check=full --show-leak-kinds=all --track-origins=yes
+    extra_memory_limit: 16
+    cpu_time_scale: 2.0
+  java:
+    executable: java
+    runtime_options: -enableassertions
+    extra_memory_limit: 256
 
 default_limits:
   stack_size_limit_mb: 4
