--- a/yajudge_grpcwebserver/conf/site@.in.yaml
+++ b/yajudge_grpcwebserver/conf/site@.in.yaml
@@ -5,6 +5,8 @@ host_name: 'my-host.my-domain.ru'
 grpc_backend_host: 'localhost'
 grpc_backend_port: 9095
 
+grpc_endpoints: '../endpoints-@CONFIG_NAME.yaml'
+
 # Common Web-application configuration
 web_app_static_root: '@WEB_DIRECTORY'
 web_app_index_file: '/index.html'
