makefiles for post-install script

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,6 +1,6 @@
 first: all
 
-all: control ensure-directories
+all: control ensure-directories post-install
 
 control:
 	make -C yajudge_control
@@ -8,7 +8,11 @@ control:
 ensure-directories:
 	make -C yajudge_ensure_directories
 
+post-install:
+	make -C yajudge_post_install
+
 clean:
 	make -C yajudge_control clean
 	make -C yajudge_ensure_directories clean
+	make -C yajudge_post_install clean
 	rm -rf bin
