initial create-instance script

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,6 +1,6 @@
 first: all
 
-all: control ensure-directories post-install
+all: control ensure-directories post-install create-instance
 
 control:
 	make -C yajudge_control
@@ -11,8 +11,12 @@ ensure-directories:
 post-install:
 	make -C yajudge_post_install
 
+create-instance:
+	make -C yajudge_create_instance
+
 clean:
 	make -C yajudge_control clean
 	make -C yajudge_ensure_directories clean
 	make -C yajudge_post_install clean
+	make -C yajudge_create_instance clean
 	rm -rf bin
