--- a/yajudge_grpcwebserver/nginx@.in.conf
+++ b/yajudge_grpcwebserver/nginx@.in.conf
@@ -10,8 +10,8 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/@HOST_NAME/privkey.pem;
 
     # Check paths to logs pointing to write-accessible directory
-    access_log @LOGS_DIRECTORY/@CONFIG_NAME/nginx.access.log;
-    error_log @LOGS_DIRECTORY/@CONFIG_NAME/nginx.error.log;
+    access_log @YAJUDGE_HOME/log/@CONFIG_NAME/nginx.access.log;
+    error_log @YAJUDGE_HOME/log/@CONFIG_NAME/nginx.error.log;
 
     location ~* /.+$ {
         # just pass requests to yajudge-grpcwebserver
