--- a/grader/Cargo.toml
+++ b/grader/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0.75"
+anyhow = "1.0.71"
 async-trait = "0.1.68"
 clap = "4.4.8"
 yaml-rust = "0.4.5"
@@ -35,6 +35,8 @@ nix = { version = "0.27.1", features = [
     "process",
     "resource",
 ] }
+serde = { version = "1.0.193", features = ["derive"] }
+postcard = { version = "1.0.8", features = ["alloc"] }
 
 [build-dependencies]
 tonic-build = "0.10.2"
