Optimize size for release build

--- a/grader/Cargo.toml
+++ b/grader/Cargo.toml
@@ -3,6 +3,11 @@ name = "grader"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+strip = true
+opt-level = "z"
+lto = true
+
 [dependencies]
 anyhow = "1.0.71"
 async-trait = "0.1.68"
